# kAirPods

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  DBUS_EXAMPLES.md  INSTALL.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
plasmoid/: metadata.json
plasmoid/contents/ui/: BatteryStatus.qml  Card.qml  CircularBatteryIndicator.qml  CompactView.qml  FeatureToggle.qml  FullView.qml  NoiseControlButton.qml  NoiseControlPanel.qml  Switch.qml  main.qml
scripts/: get.sh  install.sh  uninstall.sh
service/: Cargo.toml  rustfmt.toml
service/src/: battery_study.rs  config.rs  dbus.rs  error.rs  event.rs  main.rs  ringbuf.rs
service/src/airpods/: device.rs  mod.rs  parser.rs  protocol.rs  recognition.rs
service/src/bluetooth/: l2cap.rs  manager.rs  mod.rs
service/systemd/user/: kairpodsd.service  kde-airpods-service.service
